apps/gitea/overlays/nishir/deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: gitea
          resources:
            requests:
              cpu: 40m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 512Mi
