apps/gitea/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - rpi5-large
              weight: 80
            - preference:
                matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - rpi4-large
              weight: 50
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
        - name: tls
          secret:
            secretName: gitea-tls
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
                mode: 0640
