apps/gitea/overlays/nishir/svc.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-git
  namespace: shikanime
  annotations:
    tailscale.com/hostname: git
    tailscale.com/tags: tag:gitea
